Ticket #3399 - Covers, Action buttons, Fixes.

--- a/modules/boonex/artificer/data/template/mod_profile/css/main.css
+++ b/modules/boonex/artificer/data/template/mod_profile/css/main.css
@@ -79,7 +79,6 @@
 
 /*--- Unit ---*/
 .bx-base-pofile-unit-with-cover.bx-bp-uc-empty .bx-base-pofile-unit-cover {
-    background-color: rgba(223, 219, 229, 0.5);
     background-repeat: repeat;
     background-size: auto;
 }
@@ -118,7 +117,6 @@ p.bx-base-pofile-unit-thumb.bx-def-ava-big-size {
 /*--- Profile Cover ---*/
 .bx-base-pofile-cover-image.bx-bpci-holder img.bx-base-pofile-cover-image {
     background-size: auto;
-    background-color: rgba(223, 219, 229, 0.5);
 }
 .bx-base-profile-cover-meta .bx-menu-custom.bx-menu-custom-hor {
     -webkit-align-items: center;
@@ -145,6 +143,25 @@ p.bx-base-pofile-unit-thumb.bx-def-ava-big-size {
     position: absolute;
     width: 100%;
 }
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor > li > .bx-base-general-entity-action > a,
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item > .bx-base-general-entity-action > a,
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor > li .sys-action-element-holder a {
+    padding: 0.5rem 1.0rem;
+}
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor > li .sys-action-element-holder a {
+    display: block;
+}
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item {
+    border-color: transparent;
+    border-radius: 0;
+    box-shadow: none;
+}
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item,
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item .bx-base-general-entity-action,
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item .sys-action,
+.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom-ver .bx-menu-item .sys-action-element-holder {
+    width: 100%;
+}
 .bx-media-desktop .bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor > .bx-menu-item-more-auto > .bx-base-general-entity-action > a > .bx-mi-text,
 .bx-media-tablet .bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor > .bx-menu-item-more-auto > .bx-base-general-entity-action > a > .bx-mi-text {
     display: none;
@@ -164,12 +181,7 @@ p.bx-base-pofile-unit-thumb.bx-def-ava-big-size {
     margin: 0;
     padding: 0;
 }
-.bx-base-pofile-cover-actions div.bx-base-general-entity-actions .bx-menu-custom-hor li.bx-menu-item-more-auto .bx-popup .bx-menu-custom .bx-menu-item {
-    width: 100%;
-    border-color: transparent;
-    border-radius: 0;
-    box-shadow: none;
-}
+
 /* Cover block */
 .bx-base-profile-cover-block-wrapper .bx-base-pofile-cover-actions div.bx-base-general-entity-actions{
     position: relative;
